# KVM

./: .replit  README.md  a.pkg  examples.js  fizzbuzz.s  frompy.pkg  hello.s  index.js  ktro.js  ktroasm.py  ktroasm.spec  main.kbt  package-lock.json  package.json  pyproject.toml  replit.nix  result  test.pkg
assembly/: ktroasm.py  setup.py
assembly/ktro/: __main__.py  gram.g  gram.py  ktroasm.py
assembly/ktro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
assembly/ktro_asm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
indev/: ktro.py
kasm/: ktroasm.py  ktroasm.sh
ktroasm/: .gram.g.2149424345~  gram.g
test/: fizzbuzz.s  precision.s
